option(
	'unitdir',
	type: 'string',
	value: 'lib/systemd/system',
	description: 'systemd unit directory'
)

option(
	'with_site',
	type: 'boolean',
	value: false,
	description: 'build documentation and web pages'
)

option(
	'with_rpm',
	type: 'boolean',
	value: false,
	description: 'build RPM package'
)

option(
	'with_examples',
	type: 'boolean',
	value: false,
	description: 'build examples'
)

option(
	'with_glusterfs',
	type: 'boolean',
	value: false,
	description: 'build GlusterFS driver'
)

option(
	'with_dtests',
	type: 'boolean',
	value: true,
	description: 'build separate versions of all the binaries for distributed tests (in addition to normal versions)'
)
